添加 range 操作符

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
         <activity android:name=".IntervalActivity" />
         <activity android:name=".DoOnNextActivity" />
         <activity android:name=".BufferActivity" />
-        <activity android:name=".CombineLatestActivity"></activity>
+        <activity android:name=".CombineLatestActivity" />
+        <activity android:name=".RangeActivity"></activity>
     </application>
 
 </manifest>
